--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/sort_popularity_desc"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/sort_popularity_desc_text"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/sort_highest_rating_desc"
+        android:orderInCategory="100"
+        android:title="@string/sort_highest_rating_desc_text"
         app:showAsAction="ifRoom" />
 </menu>
