--- a/app/src/main/res/layout/fragment_display_tabletux.xml
+++ b/app/src/main/res/layout/fragment_display_tabletux.xml
@@ -2,6 +2,9 @@
 <GridView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/gridview_displayfragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</GridView>
+    android:layout_height="match_parent"
+    android:columnWidth="190sp"
+    android:gravity="center"
+    android:horizontalSpacing="0dp"
+    android:numColumns="auto_fit"
+    android:verticalSpacing="0dp" />
