--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,4 +12,9 @@
         android:orderInCategory="100"
         android:title="@string/sort_highest_rating_desc_text"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/show_favorite"
+        android:orderInCategory="100"
+        android:title="@string/sort_favorite"
+        app:showAsAction="ifRoom" />
 </menu>
