--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,10 @@
     android:id="@+id/gridview_mainactivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnWidth="193sp"
     android:gravity="center"
-    android:horizontalSpacing="0dp"
-    android:numColumns="auto_fit"
-    android:verticalSpacing="0dp"></GridView>
+    android:adjustViewBounds="true"
+    android:horizontalSpacing="1dp"
+    android:numColumns="2"
+    android:padding="0dp"
+    android:verticalSpacing="1dp"></GridView>
 
