Database Management completed
Every detail of a movie will be stored in the database, but TrailerUrl
and MovieReviews will only be parsed and stored when that movie gets
clicked. Before any movie gets clicked, a MediumMovieInfoModel will be
parsed and used for GridView display on the starting screen. Once
clicked, the movie info will be completed and a CompleteMovieInfoModel
will be applied to keep data in MovieDetailActivity.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,8 @@
     android:id="@+id/gridview_mainactivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnWidth="193sp"
     android:gravity="center"
     android:horizontalSpacing="0dp"
-    android:numColumns="auto_fit"
+    android:numColumns="2"
     android:verticalSpacing="0dp"></GridView>
 
