--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,10 +6,10 @@
         android:id="@+id/sort_popularity_desc"
         android:orderInCategory="100"
         android:title="@string/sort_popularity_desc_text"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
     <item
         android:id="@+id/sort_highest_rating_desc"
         android:orderInCategory="100"
         android:title="@string/sort_highest_rating_desc_text"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 </menu>
