Fragment code improved for tablet UX
The same pattern as the MovieDetailActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:horizontalSpacing="0dp"
-    android:numColumns="2"
+    android:numColumns="auto_fit"
+    android:columnWidth="193sp"
     android:verticalSpacing="0dp"></GridView>
 
