--- a/app/src/main/res/menu/menu_display_fragment.xml
+++ b/app/src/main/res/menu/menu_display_fragment.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_item_share"
+        android:id="@+id/menu_display_fragment_show_favorite"
         android:actionProviderClass="android.widget.ShareActionProvider"
-        android:title="Share"
-        app:showAsAction="ifRoom" />
+        android:title="@string/favorite"
+        app:showAsAction="never" />
 </menu>
