--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -15,6 +15,6 @@
     <item
         android:id="@+id/show_favorite_movies"
         android:orderInCategory="100"
-        android:title="@string/show_favorite_movies"
+        android:title="@string/favorite"
         app:showAsAction="never" />
 </menu>
