--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,8 +13,8 @@
         android:title="@string/sort_highest_rating_desc_text"
         app:showAsAction="never" />
     <item
-        android:id="@+id/show_favorite"
+        android:id="@+id/show_favorite_movies"
         android:orderInCategory="100"
-        android:title="@string/sort_favorite"
+        android:title="@string/favorite"
         app:showAsAction="never" />
 </menu>
