--- a/app/src/main/res/layout/fragment_display_tabletux.xml
+++ b/app/src/main/res/layout/fragment_display_tabletux.xml
@@ -3,9 +3,8 @@
     android:id="@+id/gridview_displayfragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:adjustViewBounds="true"
-    android:gravity="top"
-    android:horizontalSpacing="2dp"
-    android:numColumns="2"
-    android:padding="0dp"
-    android:verticalSpacing="2dp" />
+    android:columnWidth="190sp"
+    android:gravity="center"
+    android:horizontalSpacing="0dp"
+    android:numColumns="auto_fit"
+    android:verticalSpacing="0dp" />
